// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hameenkyro all placement mappings exists 1`] = `
{
  "municipal": [
    {
      "effica": "*0-85 h/kk",
      "evaka": {
        "default_option": false,
        "id": "50358394-b961-11eb-b51f-67ac436e5637",
        "name_fi": "Varhaiskasvatus 85 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "*86-139 h/kk",
      "evaka": {
        "default_option": false,
        "id": "86ef70a0-bf85-11eb-91e6-1fb57a101165",
        "name_fi": "Varhaiskasvatus 86–120 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "* yli 140 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503591ae-b961-11eb-b521-1fca99358eed",
        "name_fi": "Varhaiskasvatus yli 151 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "*Kokopäivähoito",
      "evaka": {
        "default_option": false,
        "id": "503591ae-b961-11eb-b521-1fca99358eed",
        "name_fi": "Varhaiskasvatus yli 151 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Eo-täyd ph 0-85 h/k",
      "evaka": {
        "default_option": false,
        "id": "0a58d934-6fd1-11ed-a75e-c353faef5858",
        "name_fi": "Täydentävä varhaiskasvatus 0–50 tuntia / kuukausi",
        "valid_placement_type": "PRESCHOOL_DAYCARE_ONLY",
      },
    },
    {
      "effica": "Esiopetus 4t/päivä",
      "evaka": {
        "default_option": true,
        "id": "94e44ef1-106b-401d-81b6-8e5c31cd0437",
        "name_fi": "Esiopetus",
        "valid_placement_type": "PRESCHOOL",
      },
    },
    {
      "effica": "Vuorohoito 0-85 h/kk",
      "evaka": {
        "default_option": false,
        "id": "50358394-b961-11eb-b51f-67ac436e5637",
        "name_fi": "Varhaiskasvatus 85 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Tilapäinen hoito, kp",
      "evaka": {
        "default_option": true,
        "id": "e1063bee-c19d-469d-85a5-6b0350872d76",
        "name_fi": "Tilapäinen varhaiskasvatus",
        "valid_placement_type": "TEMPORARY_DAYCARE",
      },
    },
    {
      "effica": "Vuorohoito 86-120 h/kk",
      "evaka": {
        "default_option": false,
        "id": "86ef70a0-bf85-11eb-91e6-1fb57a101165",
        "name_fi": "Varhaiskasvatus 86–120 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "*Eo-täyd. osa-aikainen",
      "evaka": {
        "default_option": false,
        "id": "0a58db0a-6fd1-11ed-a75e-bbde95c1aded",
        "name_fi": "Täydentävä varhaiskasvatus 51–85 tuntia / kuukausi",
        "valid_placement_type": "PRESCHOOL_DAYCARE_ONLY",
      },
    },
    {
      "effica": "Eo-täyd ph 86-120 h/kk",
      "evaka": {
        "default_option": false,
        "id": "0a58dbe6-6fd1-11ed-a75e-5335f2b9a91c",
        "name_fi": "Täydentävä varhaiskasvatus 86–120 tuntia / kuukausi",
        "valid_placement_type": "PRESCHOOL_DAYCARE_ONLY",
      },
    },
    {
      "effica": "Pkoti/ aikap. 0-85 h/kk",
      "evaka": {
        "default_option": false,
        "id": "50358394-b961-11eb-b51f-67ac436e5637",
        "name_fi": "Varhaiskasvatus 85 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Vuorohoito 121-140 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503590f0-b961-11eb-b520-53740af3f7ef",
        "name_fi": "Varhaiskasvatus 121-150 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Vuorohoito 141-155 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503590f0-b961-11eb-b520-53740af3f7ef",
        "name_fi": "Varhaiskasvatus 121-150 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Vuorohoito yli 171 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503591ae-b961-11eb-b521-1fca99358eed",
        "name_fi": "Varhaiskasvatus yli 151 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pph/ aikap. 141-155 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503590f0-b961-11eb-b520-53740af3f7ef",
        "name_fi": "Varhaiskasvatus 121-150 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pph/ aikap. 156-170 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503591ae-b961-11eb-b521-1fca99358eed",
        "name_fi": "Varhaiskasvatus yli 151 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pph/ aikap. yli 171 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503591ae-b961-11eb-b521-1fca99358eed",
        "name_fi": "Varhaiskasvatus yli 151 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pkoti/ aikap. 86-120 h/kk",
      "evaka": {
        "default_option": false,
        "id": "86ef70a0-bf85-11eb-91e6-1fb57a101165",
        "name_fi": "Varhaiskasvatus 86–120 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "*Kokopäivähoito 12 pv/kk",
      "evaka": {
        "default_option": false,
        "id": "50358394-b961-11eb-b51f-67ac436e5637",
        "name_fi": "Varhaiskasvatus 85 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pkoti/ aikap. 121-140 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503590f0-b961-11eb-b520-53740af3f7ef",
        "name_fi": "Varhaiskasvatus 121-150 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pkoti/ aikap. 141-155 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503590f0-b961-11eb-b520-53740af3f7ef",
        "name_fi": "Varhaiskasvatus 121-150 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pkoti/ aikap. 156-170 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503591ae-b961-11eb-b521-1fca99358eed",
        "name_fi": "Varhaiskasvatus yli 151 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
    {
      "effica": "Pkoti/ aikap. yli 171 h/kk",
      "evaka": {
        "default_option": false,
        "id": "503591ae-b961-11eb-b521-1fca99358eed",
        "name_fi": "Varhaiskasvatus yli 151 tuntia / kuukausi",
        "valid_placement_type": "DAYCARE",
      },
    },
  ],
  "voucher": [
    {
      "effica": "*0-85 h/kk",
      "evaka": {
        "default_option": false,
        "id": "36c8c2ed-7543-47de-bc42-14d163a6277d",
        "name_fi": "Palveluseteli Varhaiskasvatus 85 tuntia / kuukausi",
      },
    },
    {
      "effica": "*86-139 h/kk",
      "evaka": {
        "default_option": false,
        "id": "9eb82822-82ef-46fb-a123-29cf0af757b7",
        "name_fi": "Palveluseteli Varhaiskasvatus 86–139 tuntia / kuukausi",
      },
    },
    {
      "effica": "* yli 140 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "*Kokopäivähoito",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Eo-täyd ph 0-85 h/k",
      "evaka": {
        "default_option": false,
        "id": "fe0972a5-6ce9-41cc-a635-82fb22e7891b",
        "name_fi": "Palveluseteli Täydentävä varhaiskasvatus",
      },
    },
    {
      "effica": "Esiopetus 4t/päivä",
      "evaka": {
        "default_option": true,
        "id": "94e44ef1-106b-401d-81b6-8e5c31cd0437",
        "name_fi": "Esiopetus",
      },
    },
    {
      "effica": "Vuorohoito 0-85 h/kk",
      "evaka": {
        "default_option": false,
        "id": "36c8c2ed-7543-47de-bc42-14d163a6277d",
        "name_fi": "Palveluseteli Varhaiskasvatus 85 tuntia / kuukausi",
      },
    },
    {
      "effica": "Tilapäinen hoito, kp",
      "evaka": {
        "default_option": true,
        "id": "e1063bee-c19d-469d-85a5-6b0350872d76",
        "name_fi": "Tilapäinen varhaiskasvatus",
      },
    },
    {
      "effica": "Vuorohoito 86-120 h/kk",
      "evaka": {
        "default_option": false,
        "id": "9eb82822-82ef-46fb-a123-29cf0af757b7",
        "name_fi": "Palveluseteli Varhaiskasvatus 86–139 tuntia / kuukausi",
      },
    },
    {
      "effica": "*Eo-täyd. osa-aikainen",
      "evaka": {
        "default_option": false,
        "id": "fe0972a5-6ce9-41cc-a635-82fb22e7891b",
        "name_fi": "Palveluseteli Täydentävä varhaiskasvatus",
      },
    },
    {
      "effica": "Eo-täyd ph 86-120 h/kk",
      "evaka": {
        "default_option": false,
        "id": "fe0972a5-6ce9-41cc-a635-82fb22e7891b",
        "name_fi": "Palveluseteli Täydentävä varhaiskasvatus",
      },
    },
    {
      "effica": "Pkoti/ aikap. 0-85 h/kk",
      "evaka": {
        "default_option": false,
        "id": "36c8c2ed-7543-47de-bc42-14d163a6277d",
        "name_fi": "Palveluseteli Varhaiskasvatus 85 tuntia / kuukausi",
      },
    },
    {
      "effica": "Vuorohoito 121-140 h/kk",
      "evaka": {
        "default_option": false,
        "id": "9eb82822-82ef-46fb-a123-29cf0af757b7",
        "name_fi": "Palveluseteli Varhaiskasvatus 86–139 tuntia / kuukausi",
      },
    },
    {
      "effica": "Vuorohoito 141-155 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Vuorohoito yli 171 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pph/ aikap. 141-155 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pph/ aikap. 156-170 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pph/ aikap. yli 171 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pkoti/ aikap. 86-120 h/kk",
      "evaka": {
        "default_option": false,
        "id": "9eb82822-82ef-46fb-a123-29cf0af757b7",
        "name_fi": "Palveluseteli Varhaiskasvatus 86–139 tuntia / kuukausi",
      },
    },
    {
      "effica": "*Kokopäivähoito 12 pv/kk",
      "evaka": {
        "default_option": false,
        "id": "36c8c2ed-7543-47de-bc42-14d163a6277d",
        "name_fi": "Palveluseteli Varhaiskasvatus 85 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pkoti/ aikap. 121-140 h/kk",
      "evaka": {
        "default_option": false,
        "id": "9eb82822-82ef-46fb-a123-29cf0af757b7",
        "name_fi": "Palveluseteli Varhaiskasvatus 86–139 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pkoti/ aikap. 141-155 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pkoti/ aikap. 156-170 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
    {
      "effica": "Pkoti/ aikap. yli 171 h/kk",
      "evaka": {
        "default_option": false,
        "id": "f5d32585-2c78-4434-95d6-30b446db7d4d",
        "name_fi": "Palveluseteli Varhaiskasvatus yli 140 tuntia / kuukausi",
      },
    },
  ],
}
`;

exports[`hameenkyro placement preschool 1`] = `
[
  {
    "effica_ssn": "010124A920A",
    "placement_end_date": "2024-05-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-09",
    "placement_type": "PRESCHOOL",
    "placement_unit_id": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2024-05-31",
    "service_need_option_id": null,
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-09",
  },
]
`;

exports[`hameenkyro placement preschool 2`] = `
[
  {
    "evaka_ssn": "010124A920A",
    "placement_end_date": "2024-05-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-09",
    "placement_type": "PRESCHOOL",
    "placement_unit": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": null,
    "service_need_option_id": null,
    "service_need_shift_care": null,
    "service_need_start_date": null,
  },
]
`;

exports[`hameenkyro placement preschool daycare 1`] = `
[
  {
    "effica_ssn": "010124A920A",
    "placement_end_date": "2023-08-08",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-01",
    "placement_type": "PRESCHOOL_DAYCARE_ONLY",
    "placement_unit_id": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2023-08-08",
    "service_need_option_id": "0a58d934-6fd1-11ed-a75e-c353faef5858",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-02",
  },
  {
    "effica_ssn": "010124A920A",
    "placement_end_date": "2024-05-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-09",
    "placement_type": "PRESCHOOL_DAYCARE",
    "placement_unit_id": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2024-05-31",
    "service_need_option_id": "1c5d7ea4-669f-4b4e-8593-353be4c9cea0",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-09",
  },
  {
    "effica_ssn": "010124A920A",
    "placement_end_date": "2024-07-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2024-06-01",
    "placement_type": "PRESCHOOL_DAYCARE_ONLY",
    "placement_unit_id": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2024-07-31",
    "service_need_option_id": "0a58d934-6fd1-11ed-a75e-c353faef5858",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2024-06-01",
  },
]
`;

exports[`hameenkyro placement preschool daycare 2`] = `
[
  {
    "evaka_ssn": "010124A920A",
    "placement_end_date": "2023-08-08",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-01",
    "placement_type": "PRESCHOOL_DAYCARE_ONLY",
    "placement_unit": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2023-08-01",
    "service_need_option_id": "0a58d934-6fd1-11ed-a75e-c353faef5858",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-01",
  },
  {
    "evaka_ssn": "010124A920A",
    "placement_end_date": "2023-08-08",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-01",
    "placement_type": "PRESCHOOL_DAYCARE_ONLY",
    "placement_unit": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2023-08-08",
    "service_need_option_id": "0a58d934-6fd1-11ed-a75e-c353faef5858",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-02",
  },
  {
    "evaka_ssn": "010124A920A",
    "placement_end_date": "2024-05-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-09",
    "placement_type": "PRESCHOOL_DAYCARE",
    "placement_unit": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2024-05-31",
    "service_need_option_id": "1c5d7ea4-669f-4b4e-8593-353be4c9cea0",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-09",
  },
  {
    "evaka_ssn": "010124A920A",
    "placement_end_date": "2024-07-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2024-06-01",
    "placement_type": "PRESCHOOL_DAYCARE_ONLY",
    "placement_unit": "92b6e496-d273-11ee-9265-db72361ab90d",
    "service_need_end_date": "2024-07-31",
    "service_need_option_id": "0a58d934-6fd1-11ed-a75e-c353faef5858",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2024-06-01",
  },
]
`;

exports[`hameenkyro placement private voucher service 1`] = `
[
  {
    "effica_ssn": "010124A920A",
    "placement_end_date": "2024-05-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-09",
    "placement_type": "DAYCARE",
    "placement_unit_id": "ccf269c5-8677-452c-b2b7-e476a031f7b0",
    "service_need_end_date": "2024-05-31",
    "service_need_option_id": "36c8c2ed-7543-47de-bc42-14d163a6277d",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-09",
  },
]
`;

exports[`hameenkyro placement private voucher service 2`] = `
[
  {
    "evaka_ssn": "010124A920A",
    "placement_end_date": "2024-05-31",
    "placement_place_guarantee": false,
    "placement_start_date": "2023-08-09",
    "placement_type": "DAYCARE",
    "placement_unit": "ccf269c5-8677-452c-b2b7-e476a031f7b0",
    "service_need_end_date": "2024-05-31",
    "service_need_option_id": "36c8c2ed-7543-47de-bc42-14d163a6277d",
    "service_need_shift_care": "NONE",
    "service_need_start_date": "2023-08-09",
  },
]
`;
